[gd_scene load_steps=7 format=3 uid="uid://c8j6y8r4e3q5v2"]

[ext_resource type="Script" uid="uid://bjjs1ch1at4mr" path="res://scripts/effects/teleport_effect.gd" id="1_yjr2t"]

[sub_resource type="Gradient" id="Gradient_lfxnq"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.8, 0.2, 0.8, 1, 0.8, 0.2, 0.8, 0.8, 0.8, 0.2, 0.8, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ixvs3"]
gradient = SubResource("Gradient_lfxnq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uxdnj"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 3.0
color = Color(0.8, 0.2, 0.8, 0.8)
color_ramp = SubResource("GradientTexture1D_ixvs3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qjnxr"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
color = Color(0.8, 0.2, 0.8, 0.8)
color_ramp = SubResource("GradientTexture1D_ixvs3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yvhgr"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector3(0, 98, 0)
scale_min = 2.0
scale_max = 2.0
color = Color(0.8, 0.2, 0.8, 0.8)
color_ramp = SubResource("GradientTexture1D_ixvs3")

[node name="TeleportEffect" type="Node2D"]
script = ExtResource("1_yjr2t")

[node name="DisappearParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_uxdnj")
lifetime = 0.5
one_shot = true
explosiveness = 0.8

[node name="AppearParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_qjnxr")
lifetime = 0.5
one_shot = true
explosiveness = 0.8

[node name="DamageParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_yvhgr")
lifetime = 0.7
one_shot = true
explosiveness = 0.6
